--- a/examples/simple custom 404/404/404.html
+++ b/examples/simple custom 404/404/404.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
     <title>Document</title>
     <link rel="stylesheet" href="/404/404.css" />
   </head>
